# moria

./: AGENTS.md  Cargo.toml  README.md
.cargo/: config.toml
assets/config/: curated_manifest.ron  input.ron  presentation.ron  product_one_region.ron
assets/manifests/: asset_budgets.ron  asset_licenses.ron
assets/materials/: materials.ron  terrain_albedo.ktx2  terrain_normal.ktx2  terrain_orm.ktx2  water_normal.ktx2
assets/player/: explorer.glb
assets/props/: boulder.glb  rock.glb  stump.glb
assets/shaders/: raw_voxel.wgsl  terrain.wgsl  vegetation.wgsl  water.wgsl
assets/stamps/: ruin_p1.ron
assets/vegetation/: birch_far.glb  birch_mid.glb  birch_near.glb  bush_far.glb  bush_near.glb  grass_cluster.glb  pine_far.glb  pine_mid.glb  pine_near.glb  tree_horizon_cards.ktx2
crates/moria-bench/: Cargo.toml
crates/moria-bench/src/: cli.rs  lib.rs  main.rs
crates/moria-bench/src/capture/: output.rs  schema.rs
crates/moria-bench/src/scenarios/: mod.rs  query_probe.rs
crates/moria-bench/tests/: query_probe.rs  report_schema.rs
crates/moria-curate/: Cargo.toml
crates/moria-curate/src/: main.rs  search.rs
crates/moria-curate/tests/: public_facade.rs
crates/moria-demo/: Cargo.toml
crates/moria-demo/tests/: public_world_facade.rs
crates/moria-world/: Cargo.toml
crates/moria-world/src/: config.rs  config_validation.rs  lib.rs  lifecycle.rs  testing.rs
crates/moria-world/src/curation/: facade.rs  generate.rs  mod.rs  model.rs  stress.rs
crates/moria-world/src/generation/: biome.rs  identity.rs  mod.rs  terrain.rs
crates/moria-world/src/mutation/: admission.rs  api.rs  mod.rs
crates/moria-world/src/objects/: index.rs  mod.rs  shapes.rs  validation.rs
crates/moria-world/src/presentation/: asset_ids.rs  assets.rs  basis_ktx2.rs  mod.rs  validation.rs
crates/moria-world/src/query/: capsule.rs  diagnostics.rs  mod.rs  ray.rs  read.rs  sample.rs
crates/moria-world/src/storage/: brick.rs  coordinates.rs  mod.rs  store.rs  store_tests.rs  voxel.rs
crates/moria-world/src/streaming/: focus.rs  lifecycle.rs  mod.rs  planner.rs
crates/moria-world/src/telemetry/: mod.rs  reports.rs  runtime.rs
crates/moria-world/src/terrain/: mod.rs  ownership.rs
crates/moria-world/src/testing/: conformance.rs
crates/moria-world/tests/: asset_declarations.rs  asset_placeholders.rs  asset_validation.rs  capsule_contract.rs  config_contract.rs  conformance_harness.rs  curation_facade.rs  curation_model_contract.rs  edit_admission.rs  generation_contract.rs  headless_fixture.rs  object_index_contract.rs  object_shapes_and_ownership_contract.rs  public_diagnostics.rs  ray_contract.rs  storage_contract.rs  telemetry_reports.rs  world_lifecycle.rs
crates/moria-world/tests/assets/: config_curated_manifest_ron_placeholder.rs  config_input_ron_placeholder.rs  config_presentation_ron_placeholder.rs  config_product_one_region_ron_placeholder.rs  manifests_asset_budgets_ron_placeholder.rs  manifests_asset_licenses_ron_placeholder.rs  materials_materials_ron_placeholder.rs  materials_terrain_albedo_ktx2_placeholder.rs  materials_terrain_normal_ktx2_placeholder.rs  materials_terrain_orm_ktx2_placeholder.rs  materials_water_normal_ktx2_placeholder.rs  player_explorer_glb_placeholder.rs  props_boulder_glb_placeholder.rs  props_rock_glb_placeholder.rs  props_stump_glb_placeholder.rs  shaders_raw_voxel_wgsl_placeholder.rs  shaders_terrain_wgsl_placeholder.rs  shaders_vegetation_wgsl_placeholder.rs  shaders_water_wgsl_placeholder.rs  stamps_ruin_p1_ron_placeholder.rs  vegetation_birch_far_glb_placeholder.rs  vegetation_birch_mid_glb_placeholder.rs  vegetation_birch_near_glb_placeholder.rs  vegetation_bush_far_glb_placeholder.rs  vegetation_bush_near_glb_placeholder.rs  vegetation_grass_cluster_glb_placeholder.rs  vegetation_pine_far_glb_placeholder.rs  vegetation_pine_mid_glb_placeholder.rs  vegetation_pine_near_glb_placeholder.rs  vegetation_tree_horizon_cards_ktx2_placeholder.rs
docs/: design-document.md  engineering-evidence.md  interview-record.md  issue-review.md  issues.json  product-scope-authority.md  tdd-review.md
docs/mini-dag/issue-381/: plan.md
docs/planning/authority/: authority-ledger.json  review.md  source-manifest.json
docs/pm-runs/42a9e76e-62c1-40fd-bc29-9cb367f436bf/: tracker-issues.json
docs/pm-runs/aaf49394-41f7-4a11-942c-4cc95fdc568e/: tracker-issues.json
docs/pm-runs/ad7fad14-fd10-4671-93a1-693e813e18c1/: tracker-issues.json
docs/pm-runs/b02db607-f99b-4c7e-9b98-a1cd14baebe4/: tracker-issues.json
docs/pm-runs/d3d43f2e-1bad-40c0-b4cd-02fd153df867/: change-analysis.md  change-design.md
docs/pm-runs/d3d43f2e-1bad-40c0-b4cd-02fd153df867/change-tdd/: api.md  data-model.md  migration.md  overview.md  testing.md
docs/seeds/: README.md  gpu-resident-substrate.md  product-one-seed.md  project-boundary.md  system-substrate-pivot.md  voxel-world-substrate.md
docs/tdd/: api.md  assets.md  benchmarks.md  config.md  conformance-harness.md  data-model.md  implementation-plan.md  overview.md  persistence.md  rendering.md  states.md  systems.md
test-specs/: issue-101.md  issue-103.md  issue-105.md  issue-107.md  issue-109.md  issue-113.md  issue-114.md  issue-115.md  issue-116.md  issue-117.md  issue-119.md  issue-120.md  issue-121.md  issue-124.md  issue-125.md  issue-127.md  issue-128.md  issue-130.md  issue-131.md  issue-133.md  issue-134.md  issue-136.md  issue-138.md  issue-139.md  issue-140.md  issue-143.md  issue-144.md  issue-146.md  issue-149.md  issue-153.md  issue-155.md  issue-157.md  issue-158.md  issue-160.md  issue-162.md  issue-164.md  issue-166.md  issue-199.md  issue-200.md  issue-201.md  (+94 more)
