[workspace]
members = [
    "crates/moria-world",
    "crates/moria-demo",
    "crates/moria-bench",
    "crates/moria-curate",
]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
# Individual packages opt into rendering and platform backends as they need
# them. The shared world facade and its headless integration fixtures only
# require Bevy's app/ECS/time support.
bevy = { version = "0.19", default-features = false, features = ["bevy_state"] }
directories = "6"
ron = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sysinfo = "0.38"
zstd = "0.13"

[workspace.lints.rust]
unsafe_code = "forbid"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"
