[package]
name = "moria-bench"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "moria-bench"
path = "src/main.rs"
test = false
bench = false

[dependencies]
# Bench scenarios use the headed renderer and window platform.
bevy = { workspace = true, features = ["3d"] }
moria-world = { path = "../moria-world" }
serde.workspace = true
serde_json.workspace = true
sysinfo.workspace = true

[lints]
workspace = true
