[package]
name = "moria-curate"
version.workspace = true
edition.workspace = true

[[bin]]
name = "moria-curate"
path = "src/main.rs"
bench = false

[dependencies]
moria-world = { path = "../moria-world", features = ["curation"] }
ron.workspace = true
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
