[package]
name = "moria-demo"
version.workspace = true
edition.workspace = true

[[bin]]
name = "moria-demo"
path = "src/main.rs"
test = false
bench = false

[dependencies]
# The demo launches Bevy's headed default plugin set.
bevy = { workspace = true, features = ["3d"] }
moria-world = { path = "../moria-world" }

[lints]
workspace = true
