[package]
name = "moria-world"
version.workspace = true
edition.workspace = true

[[test]]
name = "shaders_water_wgsl_placeholder"
path = "tests/assets/shaders_water_wgsl_placeholder.rs"

[[test]]
name = "shaders_terrain_wgsl_placeholder"
path = "tests/assets/shaders_terrain_wgsl_placeholder.rs"

[features]
curation = []

[dependencies]
bevy.workspace = true
directories.workspace = true
ron.workspace = true
serde.workspace = true
sha2.workspace = true
zstd.workspace = true

[dev-dependencies]
proptest = "1"
serde_json.workspace = true

[[test]]
name = "props_boulder_glb_placeholder"
path = "tests/assets/props_boulder_glb_placeholder.rs"

[[test]]
name = "props_stump_glb_placeholder"
path = "tests/assets/props_stump_glb_placeholder.rs"

[[test]]
name = "vegetation_grass_cluster_glb_placeholder"
path = "tests/assets/vegetation_grass_cluster_glb_placeholder.rs"

[[test]]
name = "vegetation_birch_near_glb_placeholder"
path = "tests/assets/vegetation_birch_near_glb_placeholder.rs"

[[test]]
name = "vegetation_pine_far_glb_placeholder"
path = "tests/assets/vegetation_pine_far_glb_placeholder.rs"

[[test]]
name = "manifests_asset_budgets_ron_placeholder"
path = "tests/assets/manifests_asset_budgets_ron_placeholder.rs"

[[test]]
name = "shaders_vegetation_wgsl_placeholder"
path = "tests/assets/shaders_vegetation_wgsl_placeholder.rs"

[[test]]
name = "shaders_raw_voxel_wgsl_placeholder"
path = "tests/assets/shaders_raw_voxel_wgsl_placeholder.rs"

[[test]]
name = "manifests_asset_licenses_ron_placeholder"
path = "tests/assets/manifests_asset_licenses_ron_placeholder.rs"

[[test]]
name = "props_rock_glb_placeholder"
path = "tests/assets/props_rock_glb_placeholder.rs"

[[test]]
name = "player_explorer_glb_placeholder"
path = "tests/assets/player_explorer_glb_placeholder.rs"

[lints]
workspace = true
