[package]
name = "moria-world"
version.workspace = true
edition.workspace = true

[features]
curation = []

[dependencies]
bevy = { workspace = true, features = ["basis-universal", "bevy_asset", "bevy_image", "bevy_render", "ktx2", "zstd_rust"] }
basisu = "0.1"
directories.workspace = true
ktx2 = "0.5"
naga = { version = "29", features = ["wgsl-in"] }
ron.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
zstd.workspace = true

[dev-dependencies]
proptest = "1"

# Keep the asset contract tests in one integration-test crate. Listing every
# fixture as its own target forced Cargo to link the Bevy dependency graph once
# per fixture in every agent worktree.
[[test]]
name = "asset_placeholders"
path = "tests/asset_placeholders.rs"

[[test]]
name = "curation_facade"
path = "tests/curation_facade.rs"
required-features = ["curation"]

[lints]
workspace = true
